deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-counter
spec:
  template:
    spec:
      containers:
        - name: ip-counter
          image: ilmannafian/ip-counter:0.2.2
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 5
