deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ip-counter
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
