deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-counter
  annotations:
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  rules:
    - host: ipcounter.ilman.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ip-counter
                port:
                  name: http
  tls:
    - hosts:
        - ipcounter.ilman.io
      secretName: ipcounter-ilman-io
